--- a/style.css
+++ b/style.css
@@ -15,9 +15,14 @@ body {
 
 .hero {
     text-align: center;
-    padding: 100px 0;
+    padding: 100px 20px;
     background: linear-gradient(to right, #f5f5dc,#f5f5df);
-    color: white;
+    color: #333;
+    position: relative;
+}
+.hero-content {
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 .profile-pic {
@@ -31,6 +36,38 @@ body {
     margin-bottom: 20px;
 }
 
+.hero h1 {
+    font-size: 2.5rem;
+    margin: 10px 0;
+}
+
+.hero p {
+    font-size: 1.2rem;
+    margin: 10px 0;
+}
+
+.bio {
+    font-style: italic;
+    margin: 20px 0;
+    font-size: 1.1rem;
+}
+.links {
+    margin-top: 20px;
+}
+
+.links a {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 1rem;
+    text-decoration: none;
+    color: #0072ff;
+    border-bottom: 2px solid transparent;
+    transition: border-color 0.3s;
+}
+
+.links a:hover {
+    border-bottom: 2px solid #0072ff;
+}
 header {
     background-color: #333;
     color: #fff;
@@ -131,7 +168,7 @@ button.dark-mode-toggle {
     }
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
     .profile-pic {
         width: 120px;
         height: 120px;
@@ -140,5 +177,23 @@ button.dark-mode-toggle {
     button.dark-mode-toggle {
         padding: 8px 16px;
         font-size: 14px;
+    }
+} */
+@media (max-width: 768px) {
+    .profile-pic {
+        width: 150px;
+        height: 150px;
+    }
+
+    .hero h1 {
+        font-size: 2rem;
+    }
+
+    .hero p, .bio {
+        font-size: 1rem;
+    }
+
+    .links a {
+        font-size: 0.9rem;
     }
 }
