--- a/style.css
+++ b/style.css
@@ -19,8 +19,24 @@ body {
     background: linear-gradient(to right, #f5f5dc,#f5f5df);
     color: #333;
     position: relative;
+    overflow: hidden;
+}
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('herobg.jpg') no-repeat center center;
+    background-size: cover;
+    filter: blur(10px); 
+    z-index: -1; 
+    opacity: 0.6; /* Optional: Adjust the opacity to make the blur effect more subtle */
 }
 .hero-content {
+    position: relative;
+    z-index: 1;
     max-width: 800px;
     margin: 0 auto;
 }
