--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
     font-family: 'Roboto', Arial, sans-serif; /* Updated to use Roboto font */
     line-height: 1.6;
@@ -16,11 +15,12 @@ body {
 .hero {
     text-align: center;
     padding: 100px 20px;
-    background: linear-gradient(to right, #f5f5dc,#f5f5df);
+    background: linear-gradient(to right, #f5f5dc, #f5f5df);
     color: #333;
     position: relative;
     overflow: hidden;
 }
+
 .hero::before {
     content: "";
     position: absolute;
@@ -30,9 +30,10 @@ body {
     height: 100%;
     background: url('herobg.jpg') no-repeat center center;
     background-size: cover;
-    filter: blur(10px); 
-    z-index: -1; 
-    opacity: 0.6; /* Optional: Adjust the opacity to make the blur effect more subtle */
+    filter: blur(10px);
+    z-index: -1;
+    opacity: 0.6;
+}
 }
 .hero-content {
     position: relative;
