--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     height: 100%;
     background: url('herobg.jpg') no-repeat center center;
     background-size: cover;
-    filter: blur(10px);
+    filter: none;
     z-index: -1;
     opacity: 0.6;
     display:block;
