--- a/style.css
+++ b/style.css
@@ -42,7 +42,9 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3); /* Dark overlay */
+    background: url('herobg.jpg');
+    background-size: cover;
+    filter: none;
     z-index: 0;
     pointer-events: none; /* Ensure the overlay doesn't interfere with content */
 }
