--- a/style.css
+++ b/style.css
@@ -45,9 +45,10 @@ body {
     background: url('herobg.jpg');
     background-size: cover;
     filter: blur(10px);
-    z-index: -1;
+    
     opacity: 0.6;
-    pointer-events: none; /* Ensure the overlay doesn't interfere with content */
+    pointer-events: none;
+    z-index: -1;/* Ensure the overlay doesn't interfere with content */
 }
 }
 .hero-content {
