--- a/style.css
+++ b/style.css
@@ -15,26 +15,13 @@ body {
 .hero {
     text-align: center;
     padding: 100px 20px;
-    background: linear-gradient(to right, #f5f5dc, #f5f5df);
-    color: #333;
+/*     background: linear-gradient(to right, #f5f5dc, #f5f5df); */
+/*     color: #333; */
     position: relative;
     overflow: hidden;
 }
 
-/* .hero::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('herobg.jpg') no-repeat center center;
-    background-size: cover;
-    filter: none;
-    z-index: -1;
-    opacity: 0.6;
-    display:block;
-} */
+
 .hero::before {
     content: "";
     position: absolute;
@@ -48,9 +35,9 @@ body {
     
     opacity: 0.6;
     pointer-events: none;
-    z-index: 1;/* Ensure the overlay doesn't interfere with content */
+    z-index: -1;/* Ensure the overlay doesn't interfere with content */
 }
-}
+
 .hero-content {
     position: relative;
     z-index: 1;
