--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('herobg.jpg');
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('herobg.jpg');
+/*     background: url('herobg.jpg'); */
     background-size: cover;
     filter: blur(5px);
     
@@ -67,8 +68,6 @@ body {
     margin: 10px 0;
 }
 .hero h1, .hero p {
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black */
     padding: 10px;
 }
 
