--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('herobg.jpg');
-/*     background: url('herobg.jpg'); */
+/*     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('herobg.jpg'); */
+    background: url('herobg.jpg');
     background-size: cover;
     filter: blur(5px);
     
-    opacity: 1.0;
+    opacity: 0.8;
     pointer-events: none;
     z-index: -1;/* Ensure the overlay doesn't interfere with content */
 }
@@ -42,13 +42,14 @@ body {
 .hero-content {
     position: relative;
     z-index: 1;
+    color: #f0f0f0;
     max-width: 800px;
     margin: 0 auto;
 }
 
 .profile-pic {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     border: 5px solid white;
     object-fit: cover; 
@@ -60,11 +61,13 @@ body {
 
 .hero h1 {
     font-size: 2.5rem;
+    color: #f0f0f0;
     margin: 10px 0;
 }
 
 .hero p {
     font-size: 1.2rem;
+    color: #f0f0f0;
     margin: 10px 0;
 }
 .hero h1, .hero p {
