--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
     position: relative;
     overflow: hidden;
     flex-wrap: wrap; /* Ensures content wraps on smaller screens */
-    text-align: left; /* Align text to the left */
 }
 
 
@@ -42,6 +41,7 @@ body {
 }
 
 .hero-content {
+    display: flex;
     position: relative;
     z-index: 1;
     color: #f0f0f0;
