--- a/style.css
+++ b/style.css
@@ -42,14 +42,17 @@ body {
 
 .hero-content {
     display: flex;
+    flex-direction: row;
+    align-items:center;
     position: relative;
     z-index: 1;
     color: #f0f0f0;
-    max-width: 800px;
+    max-width: 1000px;
     margin-left: 20px;
 }
 
 .profile-pic {
+    flex-shrink: 0;
     width: 400px;
     height: 400px;
     border-radius: 50%;
@@ -58,9 +61,12 @@ body {
     object-position: center; 
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-/*     margin-bottom: 20px; */
+    margin-bottom: 20px;
 }
 
+.hero-content > div {
+    max-width: calc(100% - 340px); /* Make sure text doesn't overlap with image */
+}
 .hero h1 {
     font-size: 2.5rem;
     margin: 10px 0;
