--- a/style.css
+++ b/style.css
@@ -42,9 +42,10 @@ body {
 
 .hero-content {
     display: flex;
-    flex-direction: row;
-    align-items:center;
-    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items:flex-start;
+/*     position: relative; */
     z-index: 1;
     color: #f0f0f0;
     max-width: 1000px;
@@ -69,7 +70,7 @@ body {
 }
 .hero h1 {
     font-size: 2.5rem;
-    margin: 10px 0;
+    margin: 0;
     background-color: rgba(0, 0, 0, 0.75);
     padding: 10px;
     border-radius: 5px;
@@ -96,7 +97,6 @@ body {
 
 .bio {
     font-style: italic;
-    margin: 20px 0;
     font-size: 1.1rem;
     color: #f0f0f0;
     margin: 10px 0;
@@ -107,6 +107,8 @@ body {
 }
 .links {
     margin-top: 20px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .links a {
